spiderfoot-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: spiderfoot
spec: {}
status: {}
