spiderfoot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: spiderfoot
  name: spiderfoot
  namespace: spiderfoot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spiderfoot
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: spiderfoot
    spec:
      containers:
        - image: "localhost:5000/spiderfoot:latest"
          name: spiderfoot
          ports:
            - containerPort: 5001
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/spiderfoot
              name: spiderfoot-data
      restartPolicy: Always
      volumes:
        - name: spiderfoot-data
          persistentVolumeClaim:
            claimName: spiderfoot-data
