spiderfoot-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: spiderfoot
  name: spiderfoot
  namespace: spiderfoot
spec:
  type: NodePort
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
      nodePort: 30008
  selector:
    io.kompose.service: spiderfoot
